--- a/index.html
+++ b/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+<html lang="es">
+    <head>
+        <meta charset="UTF_8">
+        <meta name="viewport" content="width=device-width">
+        <title>Juego Ahorcado Alura</title>
+        <link rel="stylesheet" href="reset.css">
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <header>
+        <img class="logo" src="img/Logo.png">
+        <main class="tablero">
+               <div class="botones">
+                    <button class="inicio"><a href="./juego.html" class="inicio">Iniciar Juego</a></button>
+                    <button class="agregar">Agregar Nueva Palabra</button>
+                </div>
+                    <form id="adicionar">
+                        <input id="palabra" type="text" placeholder="Escriba la palabra a agregar">
+                        <div class="botones3">
+                            <p class="info">Solo palabras Mayusculas y sin tilde</p>
+                            <button id="agrega">Guardar</button>
+                            <a  class="jugar" href="./juego.html">Jugar</a>
+                        </div>
+                    </form>
+            </div> 
+        </main>
+        <footer>
+           
+
+        </footer>
+  
     
-</body>
+    </body>
+
 </html>
