--- a/playgame.html
+++ b/playgame.html
@@ -8,8 +8,9 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <img class="logo" src="img/Logo.png">
+        <img class="logo" src="img/logo.png">
         <main class="tablero">
+               <canvas id="canvas" width="1200" height="800"></canvas>
                 <div class="juego">
                     <div class="ahorcado">
                         <img id="hombre"/>
