--- a/index.html
+++ b/index.html
@@ -20,11 +20,7 @@
 
       <header>
         <img src="img/LogoAlura.png" alt="Logo de Alura" id="logo-alura">
-        <div id="toggle">
-          <i class="indicator"></i>
-          <i class="cuerda"><img src="img/cuerda.png" class='cuerda' alt=""> </i>
-          <i class="globo"> <img src="img/globo.png" class='globo' alt=""> </i>
-        </div>
+  
       </header>
 
       <main class="main">
@@ -88,7 +84,7 @@
                     <button id="btn-letra">W</button>
                     <button id="btn-letra">X</button>
                     <button id="btn-letra">Y</button>
-                    <button id="btn-letra">Z</button>
+                    <button id="btn-letra">Z</button>_
                   </div>
                 </div>
           </section>
